Source/CSharpClient/OceanSimulation.Infrastructure/Interop/EnKFInterop.cs


        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int EnKF_GetCurrentCovariance(IntPtr handle,
                                                           [Out] double[] covariance,
                                                           int matrixSize);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int EnKF_GetEnsembleMember(IntPtr handle,
                                                        int memberIndex,
                                                        [Out] OceanState[] memberState,
                                                        int stateSize);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int EnKF_GetEnsembleStatistics(IntPtr handle,
                                                            out double ensembleSpread,
                                                            out double ensembleMeanNorm);

        // ==============================================================================
        // 观测算子接口
        // ==============================================================================

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ObsOp_Create(ObservationType obsType, IntPtr gridHandle);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ObsOp_Destroy(IntPtr handle);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ObsOp_Apply(IntPtr handle,
                                             [In] OceanState[] modelState,
                                             int stateSize,
                                             [Out] double[] observations,
                                             int obsSize);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ObsOp_Validate(IntPtr handle,
                                                 ref ObservationData observations);

        // ==============================================================================
        // 局地化和充气接口
        // ==============================================================================

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int EnKF_SetLocalization(IntPtr handle,
                                                      double radius,
                                                      bool enable);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int EnKF_SetInflation(IntPtr handle,
                                                   InflationType inflationType,
                                                   double inflationFactor);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int EnKF_ComputeAdaptiveInflation(IntPtr handle,
                                                               ref ObservationData observations,
                                                               out double adaptiveFactor);

        // ==============================================================================
        // 性能监控接口
        // ==============================================================================

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int EnKF_GetPerformanceMetrics(IntPtr handle,
                                                            out PerformanceMetrics metrics);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void EnKF_ResetPerformanceStats(IntPtr handle);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void EnKF_EnableProfiling(IntPtr handle, bool enable);

        // ==============================================================================
        // 验证和诊断接口
        // ==============================================================================

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool EnKF_ValidateSystemState(IntPtr handle);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool EnKF_CheckFilterDivergence(IntPtr handle,
                                                             double divergenceThreshold);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int EnKF_ComputeAnalysisIncrement(IntPtr handle,
                                                               out double incrementNorm);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool EnKF_ValidateLinearGaussian(IntPtr handle);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool EnKF_ValidateLorenz96(IntPtr handle);

        // ==============================================================================
        // 内存管理接口
        // ==============================================================================

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void EnKF_FreeForecastResult(ref ForecastResult result);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void EnKF_FreeAnalysisResult(ref AnalysisResult result);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void EnKF_OptimizeMemory(IntPtr handle);

        // ==============================================================================
        // 配置和参数接口
        // ==============================================================================

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void EnKF_GetDefaultConfig(out EnKFConfig config);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int EnKF_UpdateConfig(IntPtr handle, ref EnKFConfig config);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int EnKF_SaveState(IntPtr handle, [MarshalAs(UnmanagedType.LPStr)] string filename);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int EnKF_LoadState(IntPtr handle, [MarshalAs(UnmanagedType.LPStr)] string filename);

        // ==============================================================================
        // 错误处理接口
        // ==============================================================================

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int EnKF_GetLastError(IntPtr handle,
                                                   [Out] StringBuilder errorBuffer,
                                                   int bufferSize);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void EnKF_ClearError(IntPtr handle);

        // ==============================================================================
        // 工具函数接口
        // ==============================================================================

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr EnKF_CreateObservationData(int numObservations);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void EnKF_FreeObservationData(IntPtr obsData);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void EnKF_SetObservation(IntPtr obsData,
                                                      int index,
                                                      double value,
                                                      double errorVariance,
                                                      double xLocation,
                                                      double yLocation,
                                                      ObservationType obsType);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr EnKF_CreateStateArray(int stateSize);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void EnKF_FreeStateArray(IntPtr stateArray);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void EnKF_CopyState(ref OceanState dest, ref OceanState src);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void EnKF_InitializeStateZero(ref OceanState state);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void EnKF_ApplyPhysicalConstraints(ref OceanState state);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool EnKF_IsStatePhysicallyValid(ref OceanState state);

        // ==============================================================================
        // 版本和信息接口
        // ==============================================================================

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void EnKF_GetVersion([Out] StringBuilder versionBuffer, int bufferSize);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void EnKF_GetBuildInfo([Out] StringBuilder buildInfoBuffer, int bufferSize);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool EnKF_CheckHardwareSupport([MarshalAs(UnmanagedType.LPStr)] string featureName);
    }
}
